# cob-admin

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
app/: __init__.py  __main__.py  config.py
app/decorators/: __init__.py
app/forms/: __init__.py  auth.py
app/forms/cobrancas/: pessoas.py  processo.py
app/forms/proc_adm/: __init__.py
app/forms/proc_adm/defaults/: __init__.py
app/logs/: setup.py
app/misc/: __init__.py
app/models/: __init__.py  adm.py  secondaries.py  users.py
app/routes/: __init__.py  auth.py  index.py
app/routes/auth/: __init__.py
app/routes/auth/templates/: login.html
app/routes/clientes/: __init__.py
app/routes/clientes/templates/: Formclientes.html  clientes.html
app/routes/cobrancas/: __init__.py
app/routes/cobrancas/templates/: cobrancas.html
app/routes/dash/: __init__.py
app/routes/dash/templates/includes/: cards.html  charts.html  tables.html
app/routes/dashboard/: __init__.py
app/routes/dashboard/templates/: dashboard.html
app/routes/partes/: __init__.py
app/routes/partes/templates/: FormPessoas.html  pessoas.html
app/routes/processos/: __init__.py
app/routes/processos/templates/: FormProc.html  processos.html
app/routes/templates/: login.html
app/static/assets/demo/: chart-area-demo.js  chart-bar-demo.js
app/static/css/: styles.css
app/static/js/: DataTables.js  ImagePreview.js  ScriptCautelasError.js  ScriptCautelasSuccess.js  format_moeda.js  hideLoad.js  scripts.js  setEdit.js  showLoad.js  show_modal.js
app/static/js/DataTables/: DashboardTable.js  DataTables.js
app/static/js/DataTables/epi/: CautelasTable.js  EquipamentosTable.js  EstoqueTable.js  entradas.js  estoque_grade.js  grade.js
app/static/js/DataTables/gestao/: CargosTable.js  DepartamentosTable.js  EmpresasTable.js  FuncionariosTable.js
app/static/js/Formatadores/: CNPJ.js
app/static/js/cautela/: show_modal.js
app/static/js/charts/: BarChart.js  BarraChartDiaSemana.js  BarraFuncionario.js  chart-area.js  chart-bar.js
app/templates/: form_base.html  index.html  message.html
app/templates/forms/: importform.html
app/templates/handler/: index.html
app/templates/include/: navbar.html  sidebar.html
app/templates/includes/: add_itens_perms.html  footer.html  loading.html  message.html  navbar.html  show.html  show_pdf.html  sidebar.html
app/templates/pages/: profile.html.old
app/templates/pages/config/: groups.html  permissoes.html  users.html
app/templates/pages/forms/admin/: AdmChangeMailForm.html  CreateUserForm.html  (+1 more)
(+4 files in other folders)
